<resources>
    <string name="app_name">Med Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="stock">Stock</string>
    <string name="save">Save</string>
    <string name="morning">Morning</string>
    <string name="night">Night</string>
    <string name="noon">Noon</string>
</resources>